WexGit/Wex_DX/force-app/main/default/objects/Program_Template_Account__c/fields/Association__c.field-meta.xml
<CustomField>
    <fullName>Association__c</fullName>
    <label>Association</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Associations</fullName>
            </value>
            <value>
                <fullName>Back Pocket</fullName>
            </value>
            <value>
                <fullName>BizUnite</fullName>
            </value>
            <value>
                <fullName>Comm Diesel</fullName>
            </value>
            <value>
                <fullName>Commercial AK</fullName>
            </value>
            <value>
                <fullName>Cruis Fuel Fox</fullName>
            </value>
            <value>
                <fullName>Cyntryx</fullName>
            </value>
            <value>
                <fullName>FCA</fullName>
            </value>
            <value>
                <fullName>Independent Electrical Contractors</fullName>
            </value>
            <value>
                <fullName>Krist Oil</fullName>
            </value>
            <value>
                <fullName>ServiceMaster</fullName>
            </value>
            <value>
                <fullName>Svra</fullName>
            </value>
            <value>
                <fullName>Top Tier</fullName>
            </value>
            <value>
                <fullName>Tso Mobile</fullName>
            </value>
            <value>
                <fullName>Two Men and a Truck</fullName>
            </value>
            <value>
                <fullName>US Fleet Track</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>