WexGit/Wex_DX/force-app/main/default/objects/Program_Template_Account__c/fields/Billing_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Billing_Cycle__c</fullName>
    <label>Billing Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cycle 1</fullName>
            </value>
            <value>
                <fullName>Cycle 2</fullName>
            </value>
            <value>
                <fullName>Cycle 3</fullName>
            </value>
            <value>
                <fullName>Cycle 4</fullName>
            </value>
            <value>
                <fullName>Cycle 6</fullName>
            </value>
            <value>
                <fullName>Cycle 7</fullName>
            </value>
            <value>
                <fullName>Cycle 8</fullName>
            </value>
            <value>
                <fullName>Cycle 10</fullName>
            </value>
            <value>
                <fullName>Cycle 11</fullName>
            </value>
            <value>
                <fullName>Cycle 12</fullName>
            </value>
            <value>
                <fullName>Cycle 14</fullName>
            </value>
            <value>
                <fullName>Cycle 15</fullName>
            </value>
            <value>
                <fullName>Cycle 16</fullName>
            </value>
            <value>
                <fullName>Cycle 17</fullName>
            </value>
            <value>
                <fullName>Cycle 18</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>