WexGit/Wex_DX/force-app/main/default/objects/Program_Template_Account__c/fields/Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Type__c</fullName>
    <label>Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vehicle</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>