WexGit/Wex_DX/force-app/main/default/objects/Program_Template_Account__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Program Template Accounts</relationshipLabel>
    <relationshipName>Program_Template_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>