WexGit/Wex_DX/force-app/main/default/objects/Program_Template_Account__c/fields/Program_Default__c.field-meta.xml
<CustomField>
    <fullName>Program_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Program Default</label>
    <type>Checkbox</type>
</CustomField>