WexGit/Wex_DX/force-app/main/default/objects/Program_Template_Account__c/fields/Template_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Template_Account_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Template Account ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>